Actualización de archivos para la tercera entrega

--- a/myproject/AppManagement/template/listado_general.html
+++ b/myproject/AppManagement/template/listado_general.html
@@ -1,5 +1,5 @@
 <!-- listado_general.html -->
-{% extends "base.html" %}
+{% extends "padre.html" %}
 
 {% block content %}
 <h2>Listado General</h2>
