--- a/myproject/AppManagement/template/registro_alumno.html
+++ b/myproject/AppManagement/template/registro_alumno.html
@@ -1,5 +1,5 @@
 <!-- registro_alumno.html -->
-{% extends "base.html" %}  <!-- Asegúrate de tener una plantilla base -->
+{% extends "padre.html" %}  <!-- Asegúrate de tener una plantilla base -->
 
 {% block content %}
 <h2>Registro de Alumno</h2>
