--- a/myproject/AppManagement/template/registro_curso.html
+++ b/myproject/AppManagement/template/registro_curso.html
@@ -1,5 +1,5 @@
 <!-- registro_curso.html -->
-{% extends "base.html" %}
+{% extends "padre.html" %}
 
 {% block content %}
 <h2>Registro de Curso</h2>
