--- a/myproject/AppManagement/template/registro_profesor.html
+++ b/myproject/AppManagement/template/registro_profesor.html
@@ -1,5 +1,5 @@
 <!-- registro_profesor.html -->
-{% extends "base.html" %}
+{% extends "padre.html" %}
 
 {% block content %}
 <h2>Registro de Profesor</h2>
